# AFC-7Published

./: .afc7_env.setup  .gitattributes  .gitignore  readme.md
01MyirLd257Test/TAFC7HelloWorld/: TAFC7HelloWorld  main.c
01MyirLd257Test/TLD257HWFun/: A35CommonFun.c  A35CommonFun.h  TLD257EthBasic.c  TLD257EthTsn.c  TLD257HwFun.h  TLD257KeyLed.c  TLD257Led.c  TLD257RtTask.c  TLD257TsnCoreFrame.c  TLD257Uart.c  main.c  readme.md
01MyirLd257Test/TMFileMThreat/: Makefile  TMFileMThreat  main.c
01MyirLd257Test/TMFileMThreat/sensor/: imu.c  imu.h
AFCA35/ZFA35Prj/: Makefile  main.c
AFCA35/ZFA35Prj/Include/: ZFA35Lib.h
AFCA35/ZFA35Prj/Slx2Rtw/Include/: AfcControlLogic.h
AFCA35/ZFA35Prj/Slx2Rtw/Src/: AfcControlLogic.c
AFCM33/ZFM33Prj/: Makefile
AFCTarget/: .project  AFC7.ioc  AFC7V101260504.ioc  afc7.inc
AFCTarget/CM33/: .project
AFCTarget/CM33/PlatformTF-M/: CMakeLists.txt  check_config.cmake  config.cmake  config_tfm_target.h  cpuarch.cmake
AFCTarget/CM33/PlatformTF-M/include/: bl2_image_id.h  device_cfg.h  flash_layout.h  region_defs.h  target_cfg.h
AFCTarget/CM33/PlatformTF-M/ns/: CMakeLists.txt
AFCTarget/ExtMemLoader/DeviceTree/optee-os/: conf.mk  stm32mp257d-afc7-mx-rcc.dtsi  stm32mp257d-afc7-mx-resmem.dtsi  stm32mp257d-afc7-mx-rif.dtsi  stm32mp257d-afc7-mx.dts
AFCTarget/ExtMemLoader/DeviceTree/tf-a/: stm32mp25-mx.dtsi  (+1 more)
AFCTarget/LinuxBSP/: AFC7LinuxBSPSetUp.sh  check_afc7_hw.sh  issue  myb-afc7-2GB.dtb  myb-stm32mp257x-2GB_extlinux.conf  readme.md
scripts/: filesCompare.sh
scripts/debug/: .afc7_openocd.sh  m33_debug.cfg
(+47 files in other folders)
